sumo/tests/od2trips/errors/default_false_arrivallane/errors.od2trips
Error: Invalid arrivallane definition;
 must be one of ("current", or int>0)
Quitting (on error).
